--- a/src/settings/Settings.scss
+++ b/src/settings/Settings.scss
@@ -24,20 +24,6 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
   flex-direction: column;
 }
 
-@mixin set-breakpoint-gap($breakpoint, $gap) {
-  @media (min-width: $breakpoint) {
-    .settings-inner-div {
-      margin: $gap;
-    }
-  }
-}
-
-@include set-breakpoint-gap(breakpoints.$xs-breakpoint, breakpoints.$xs-gap);
-@include set-breakpoint-gap(breakpoints.$sm-breakpoint, breakpoints.$sm-gap);
-@include set-breakpoint-gap(breakpoints.$md-breakpoint, breakpoints.$md-gap);
-@include set-breakpoint-gap(breakpoints.$lg-breakpoint, breakpoints.$lg-gap);
-@include set-breakpoint-gap(breakpoints.$xl-breakpoint, breakpoints.$xl-gap);
-
 .SettingsListItem {
   display: flex;
 }
